[tool.poetry]
name = "odin"
version = "1.7.1"
description = "Data-structure definition/validation/traversal, mapping and serialisation toolkit for Python"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/python-odin/odin"
documentation = "https://odin.readthedocs.org"
keywords = ["data-structure", "validation", "data-mapping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "odin", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "~2.7 || >=3.6 <3.10"
six = "*"
typing = {version="~=3.7.4", python = "~2.7" }
enum34 = {version="*", python = "<3.4" }

pyyaml = {version = "*", optional = true }
toml = {version = "*", optional = true }
pint = {version = "*", optional = true }
arrow = {version = "*", optional = true }
msgpack = {version = "*", optional = true }
humanfriendly = {version = "*", optional = true }
ply = {version = "*", optional = true }

[tool.poetry.dev-dependencies]
mock = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "*"

[tool.poetry.extras]
yaml = ["pyyaml"]
msgpack = ["msgpack"]
toml = ["toml"]
pint = ["pint"]
arrow = ["arrow"]
inspect = ["humanfriendly"]
filter_query = ["ply"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
