[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "odin"
version = "2.2"
description = "Data-structure definition/validation/traversal, mapping and serialisation toolkit for Python"
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/python-odin/odin"
documentation = "https://odin.readthedocs.org"
keywords = ["data-structure", "validation", "data-mapping"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
packages = [
    { include = "odin", from = "src" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = {version = "*", optional = true }
toml = {version = "*", optional = true }
pint = {version = "*", optional = true }
arrow = {version = "*", optional = true }
msgpack = {version = "*", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "*"
sphinx = "*"

[tool.poetry.extras]
yaml = ["pyyaml"]
msgpack = ["msgpack"]
toml = ["toml"]
pint = ["pint"]
arrow = ["arrow"]
