[metadata]
name = odin
author = Tim Savage
author_email = tim@savage.company
summary = Data-structure definition/validation/traversal, mapping and serialisation toolkit for Python
description-file = README.rst
home-page = https://github.com/python-odin/odin
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords =
    data-structure
    validation
    data-mapping

[files]
packages =
    odin

[extras]
yaml =
    pyyaml
msgpack =
    msgpack
pint =
    pint
arrow =
    arrow
inspect =
    humanfriendly
filter_query =
    ply

[flake8]
ignore = E305

[bdist_wheel]
universal=1
