[metadata]
name = odin
author = Tim Savage
author_email = tim@savage.company
summary = Data-structure definition/validation/traversal, mapping and serialisation toolkit for Python
long-description = file: README.rst
long-description-content-type = text/x-rst
url = https://github.com/python-odin/odin
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    data-structure
    validation
    data-mapping
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
test_suite = tests
packages = find:
setup_requires =
    pytest-runner==5.2
    setuptools >=38.3
install_requires =
    six~=1.13
    typing==3.7.4.1;python_version == '2.7'
    enum34==1.1.6;python_version < '3.4'

tests_require =
    mock
    pytest
    pytest-cov

[options.packages.find]
exclude =
    tests
    docs

[options.extras_require]
yaml =
    pyyaml==5.2
msgpack =
    msgpack==0.6.2
pint =
    pint==0.9
arrow =
    arrow==0.15.4
inspect =
    humanfriendly==4.18
filter_query =
    ply

[aliases]
test = pytest

[bdist_wheel]
universal = True

[tool:pytest]
addopts =
    --cov=odin

[flake8]
ignore = E305
